[package]
name = "fix-gnupg-permissions"
version = "0.49.34"
authors = [
  "Billie Thompson <billie+fix-gnupg-permissions@billiecodes.com>"
]
edition = "2018"
description = "Fix the permissions on the GnuPG config directory."
license = "Creative Commons Zero v1.0 Universal"
repository = "https://github.com/PurpleBooth/fix-gnupg-permissions/"
readme = "README.md"
keywords = [ "gnupg", "permissions" ]
categories = [ "command-line-utilities" ]

[dependencies]
dirs = "4.0.0"
clap = "2.34.0"

[dev-dependencies]
tempfile = "3.2.0"
