[package]
name = "fix-gnupg-permissions"
version = "0.49.36"
authors = [
  "Billie Thompson <billie+fix-gnupg-permissions@billiecodes.com>"
]
edition = "2018"
description = "Fix the permissions on the GnuPG config directory."
license = "Creative Commons Zero v1.0 Universal"
repository = "https://github.com/PurpleBooth/fix-gnupg-permissions/"
readme = "README.md"
keywords = [ "gnupg", "permissions" ]
categories = [ "command-line-utilities" ]

[dependencies]
dirs = "4.0.0"
clap = { version = "3.0.5", features = ["derive", "cargo", "wrap_help", "yaml", "env", "unicode" ] }

[dev-dependencies]
tempfile = "3.3.0"
